--- a/index-dark.css
+++ b/index-dark.css
@@ -56,6 +56,10 @@ header{
     padding:0.5vw 1vw;
 
 }
+.contactUs a{
+    text-decoration: none;
+    color:#F8F8F8;
+}
 .contactUs button:hover{
     cursor: pointer;
 }
@@ -76,6 +80,7 @@ header{
 
 
 .main-body-div{
+    height:55vh;
     display:grid;
     grid-template-columns: repeat(2,1fr);
     margin:5vw 10vw;
@@ -83,7 +88,7 @@ header{
 
 .grey-shade{
     color: #b7b7b7ad;
-    font-size: 1rem;
+    font-size: 1.3rem;
 }
 
 .headinghr{
@@ -93,16 +98,15 @@ header{
 .bold-white{
     /* display: inline; */
     color: #F8F8F8;
-    font-size:3.5rem;
+    font-size:4rem;
 }
 .big-bold-white{
     width: 100%;
-    font-size: 5rem;
+    font-size: 5.5rem;
     text-align: center;
 }
-.button{
+/* .button{
     border: 2px solid whitesmoke;
-    /* color: #333; */
     border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.655);
     padding: 1.3em 2.3em;
@@ -121,7 +125,7 @@ header{
 }
 .main-left .button:hover{
     background-color: #d2d1d1;
-}
+} */
 
 
 .main-right{
@@ -130,46 +134,46 @@ header{
     grid-template-columns: repeat(3,1fr);
     /* height:50vh; */
 }
-.photo-1{
-    height: 10.5vw;
+.flexie{
+    height: 8.5vw;
     width: 10vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.7rem;
+    border-radius: 1vw;
     padding:0.4vw;
+}
+.flexie a{
+    text-decoration: none;
+    color: black;
+    font-weight: 600;
+}
+.photo-1{
     background-color: #FF9046;
     border:1px solid #FF9046;
-    border-radius: 1vw;
 }
 /* .main-right .photo-1 img{
     width:10vw;
 } */
 .photo-2{
-    height: 10.5vw;
-    width: 10vw;
-    padding:0.4vw;
     background-color: #ffce46;
     border:1px solid #ffce46;
-    border-radius: 1vw;
 }
 .photo-3{
-    height: 10.5vw;
-    width: 10vw;
-    padding:0.4vw;
     background-color: #f65656;
     border:1px solid #f65656;
-    border-radius: 1vw;
 }
-.photo-4{
-    height: 10.5vw;
-    width: 10vw;
-    padding:0.4vw;
-    background-color: #d4ff46;
-    border:1px solid #d4ff46;
-    border-radius: 1vw;
-}
-.photo-5{
-    height: 10.5vw;
-    width: 10vw;
-    padding:0.4vw;
-    background-color: #ff469c;
-    border:1px solid #ff469c;
-    border-radius: 1vw;
+
+.img1{
+    /* filter: contrast(1.4);
+    mix-blend-mode: color-dodge; */
+    position: absolute;
+    z-index: -1;
+    filter: brightness(1) saturate(10) blur(1rem);
+    opacity: 0.25;
+    width: 600px;
+    transform: rotate(40deg);
+    top: -200px;
+    left: 100px;
 }
